crates/compiler/zo-parser/tests/snapshots/snapshots__template_with_interpolation.snap
---
source: crates/compiler/zo-parser/tests/snapshots.rs
expression: parsing
---
tree:
  nodes:
    - child_start: 1
      child_count: 31
      token: Fun
      flags: 0
    - child_start: 0
      child_count: 0
      token: Ident
      flags: 1
    - child_start: 0
      child_count: 0
      token: LParen
      flags: 0
    - child_start: 0
      child_count: 0
      token: RParen
      flags: 0
    - child_start: 5
      child_count: 26
      token: LBrace
      flags: 0
    - child_start: 6
      child_count: 21
      token: Imu
      flags: 0
    - child_start: 0
      child_count: 0
      token: Ident
      flags: 1
    - child_start: 0
      child_count: 0
      token: TemplateAssign
      flags: 0
    - child_start: 9
      child_count: 18
      token: TemplateFragmentStart
      flags: 0
    - child_start: 0
      child_count: 0
      token: LAngle
      flags: 0
    - child_start: 0
      child_count: 0
      token: Ident
      flags: 1
    - child_start: 0
      child_count: 0
      token: Ident
      flags: 1
    - child_start: 0
      child_count: 0
      token: Eq
      flags: 0
    - child_start: 14
      child_count: 9
      token: LBrace
      flags: 0
    - child_start: 15
      child_count: 8
      token: If
      flags: 0
    - child_start: 0
      child_count: 0
      token: Ident
      flags: 1
    - child_start: 17
      child_count: 1
      token: LBrace
      flags: 0
    - child_start: 0
      child_count: 0
      token: String
      flags: 1
    - child_start: 0
      child_count: 0
      token: RBrace
      flags: 0
    - child_start: 0
      child_count: 0
      token: Else
      flags: 0
    - child_start: 21
      child_count: 1
      token: LBrace
      flags: 0
    - child_start: 0
      child_count: 0
      token: String
      flags: 1
    - child_start: 0
      child_count: 0
      token: RBrace
      flags: 0
    - child_start: 0
      child_count: 0
      token: RBrace
      flags: 0
    - child_start: 0
      child_count: 0
      token: Slash2
      flags: 0
    - child_start: 0
      child_count: 0
      token: RAngle
      flags: 0
    - child_start: 0
      child_count: 0
      token: Semicolon
      flags: 0
    - child_start: 28
      child_count: 3
      token: Hash
      flags: 0
    - child_start: 0
      child_count: 0
      token: Ident
      flags: 1
    - child_start: 0
      child_count: 0
      token: Ident
      flags: 1
    - child_start: 0
      child_count: 0
      token: Semicolon
      flags: 0
    - child_start: 0
      child_count: 0
      token: RBrace
      flags: 0
  values:
    - Symbol: 25
    - Symbol: 26
    - Symbol: 27
    - Symbol: 28
    - Symbol: 29
    - Symbol: 30
    - Symbol: 31
    - Symbol: 32
    - Symbol: 26
  child_indices: []
  spans:
    - start: 7
      len: 3
    - start: 11
      len: 4
    - start: 15
      len: 1
    - start: 16
      len: 1
    - start: 18
      len: 1
    - start: 28
      len: 3
    - start: 32
      len: 9
    - start: 42
      len: 3
    - start: 42
      len: 3
    - start: 46
      len: 1
    - start: 47
      len: 3
    - start: 51
      len: 5
    - start: 56
      len: 1
    - start: 57
      len: 1
    - start: 58
      len: 2
    - start: 61
      len: 7
    - start: 69
      len: 1
    - start: 70
      len: 4
    - start: 74
      len: 1
    - start: 76
      len: 4
    - start: 81
      len: 1
    - start: 82
      len: 5
    - start: 87
      len: 1
    - start: 88
      len: 1
    - start: 90
      len: 1
    - start: 91
      len: 1
    - start: 92
      len: 1
    - start: 103
      len: 1
    - start: 104
      len: 6
    - start: 111
      len: 9
    - start: 120
      len: 1
    - start: 128
      len: 1
  value_map:
    - - 1
      - 0
    - - 6
      - 1
    - - 10
      - 2
    - - 11
      - 3
    - - 15
      - 4
    - - 17
      - 5
    - - 21
      - 6
    - - 28
      - 7
    - - 29
      - 8
